--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ security/cmd/node_agent/na/pkey
 tests/e2e/local/minikube/docker-machine-driver-hyperkit
 # istioctl bash completion file
 tools/istioctl.bash
+# secrets
+*.secret
