--- a/samples/bookinfo/src/productpage/requirements.txt
+++ b/samples/bookinfo/src/productpage/requirements.txt
@@ -1,3 +1,4 @@
+appdynamics==4.5.1.0
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
@@ -7,6 +8,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-JSON==0.3.2
 gevent==1.2.2
 greenlet==0.4.12
+gunicorn==19.9.0
 idna==2.6
 itsdangerous==0.24
 jaeger-client==3.11.0
